--- a/styles/en-casual-sans.yaml
+++ b/styles/en-casual-sans.yaml
@@ -3,7 +3,6 @@ title: "Template"
 author: ""
 date: ""
 titlepage: false
-fontfamily: opensans
 fontsize: 11pt
 geometry:
   - margin=2cm
@@ -26,9 +25,10 @@ header-includes:
     \predate{}
     \postdate{}
     \usepackage[T1]{fontenc}
+    \usepackage{sourcesanspro}
     \renewcommand{\familydefault}{\sfdefault}
     \usepackage{sectsty}
-    \sectionfont{\bfseries\fontsize{18}{22}\selectfont}
-    \subsectionfont{\bfseries\fontsize{14}{17}\selectfont}
-    \subsubsectionfont{\bfseries\fontsize{12}{15}\selectfont}
+    \sectionfont{\fontseries{eb}\fontsize{18}{22}\selectfont}
+    \subsectionfont{\fontseries{eb}\fontsize{14}{17}\selectfont}
+    \subsubsectionfont{\fontseries{eb}\fontsize{12}{15}\selectfont}
 ---
