--- a/styles/en-formal-sans.yaml
+++ b/styles/en-formal-sans.yaml
@@ -3,7 +3,6 @@ title: "Template"
 author: "Haozhe Li"
 date: "\\today"
 titlepage: true
-fontfamily: opensans
 fontsize: 11pt
 geometry:
   - margin=2cm
@@ -19,11 +18,12 @@ highlight-style: tango
 header-includes:
   - |
     \usepackage[T1]{fontenc}
+    \usepackage{sourcesanspro}
     \renewcommand{\familydefault}{\sfdefault}
     \usepackage{sectsty}
-    \sectionfont{\bfseries\fontsize{18}{22}\selectfont}
-    \subsectionfont{\bfseries\fontsize{14}{17}\selectfont}
-    \subsubsectionfont{\bfseries\fontsize{12}{15}\selectfont}
+    \sectionfont{\fontseries{eb}\fontsize{18}{22}\selectfont}
+    \subsectionfont{\fontseries{eb}\fontsize{14}{17}\selectfont}
+    \subsubsectionfont{\fontseries{eb}\fontsize{12}{15}\selectfont}
     \let\oldmaketitle\maketitle
     \renewcommand{\maketitle}{\oldmaketitle\thispagestyle{empty}\newpage}
     \let\oldtableofcontents\tableofcontents
