--- a/styles/en-formal-serif.yaml
+++ b/styles/en-formal-serif.yaml
@@ -19,9 +19,9 @@ highlight-style: tango
 header-includes:
   - |
     \usepackage{sectsty}
-    \sectionfont{\normalfont\scshape\fontsize{14}{17}\selectfont}
-    \subsectionfont{\normalfont\fontsize{12}{15}\selectfont}
-    \subsubsectionfont{\normalfont\fontsize{11}{14}\selectfont}
+    \sectionfont{\normalfont\bfseries\scshape\fontsize{14}{17}\selectfont}
+    \subsectionfont{\normalfont\bfseries\fontsize{12}{15}\selectfont}
+    \subsubsectionfont{\normalfont\bfseries\fontsize{11}{14}\selectfont}
     \let\oldmaketitle\maketitle
     \renewcommand{\maketitle}{\oldmaketitle\thispagestyle{empty}\newpage}
     \let\oldtableofcontents\tableofcontents
