--- a/styles/cn-casual.yaml
+++ b/styles/cn-casual.yaml
@@ -14,17 +14,12 @@ colorlinks: true
 linkcolor: blue
 urlcolor: blue
 highlight-style: tango
-mainfont: "Noto Sans CJK SC"
-mainfontoptions:
-  - BoldFont=Noto Sans CJK SC Bold
-sansfont: "Noto Sans CJK SC"
-sansfontoptions:
-  - BoldFont=Noto Sans CJK SC Bold
 CJKmainfont: "Noto Sans CJK SC"
 CJKoptions:
   - BoldFont=Noto Sans CJK SC Bold
 header-includes:
   - |
+    \usepackage[default]{sourcesanspro}
     \usepackage{titling}
     \setlength{\droptitle}{-4em}
     \pretitle{\begin{center}\Large\bfseries}
